# CSerial

./: CMakeLists.txt  README.md  c_serial.c  c_serial.h  c_serial_atomic.h  c_serial_pdetect.h
examples/: CMakeLists.txt  example_full.c  serial_simple_term.cpp
include/cserial/: c_serial.h
src/: c_serial.c
